k8s/chat_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-api-service
spec:
  selector:
    app: chat-api
  ports:
  - port: 8084
    targetPort: 8084
  type: ClusterIP
