k8s/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-api-service
spec:
  selector:
    app: notification-api
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
