k8s/user_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
