k8s/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: argocd-cert
    networking.gke.io/v1beta1.FrontendConfig: ssl-redirect-argo
spec:
  rules:
    - host: argocd.cloudcord.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
