k8s/chat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-api-ingress
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - host: cloudcord.com
      http:
        paths:
          - path: /chat
            pathType: Prefix
            backend:
              service:
                name: chat-api-service
                port:
                  number: 8084
