k8s/notification-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-api-ingress
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - host: cloudcord.com
      http:
        paths:
          - path: /notification
            pathType: Prefix
            backend:
              service:
                name: notification-api-service
                port:
                  number: 8083
